Work on dashboard issues component

--- a/src/app/pages/dashboard-page/dashboard-issues-report/dashboard-issues-report.component.html
+++ b/src/app/pages/dashboard-page/dashboard-issues-report/dashboard-issues-report.component.html
@@ -1,16 +1,18 @@
 <div class="reports">
 
-  <div class="reports__item" *ngFor="let report of reports">
-    <div class="icon-holder">
-      <md-icon>{{report.issues.length === 0 ? 'done' : 'close'}}</md-icon>
-    </div>
-    <div>
-      <div class="label">{{report.label}}</div>
-      <div class="issues--none" *ngIf="report.issues.length === 0; else issues">No issues reported</div>
+  <div class="reports__item" *ngFor="let report of reports" [style.width]="100 / reports.length + '%'">
+    <div class="wrapper">
+      <div class="icon-holder">
+        <md-icon>{{report.issues.length === 0 ? 'done' : 'close'}}</md-icon>
+      </div>
+      <div>
+        <div class="label">{{report.label}}</div>
+        <div class="issues--none" *ngIf="report.issues.length === 0; else issues">No issues reported</div>
 
-      <ng-template #issues>
-        <div *ngFor="let issue of report.issues"></div>
-      </ng-template>
+        <ng-template #issues>
+          <div *ngFor="let issue of report.issues"></div>
+        </ng-template>
+      </div>
     </div>
   </div>
 
