Add top subscriptions graph with dummy data

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -25,6 +25,8 @@
   <div class="charts-container">
     <top-campaigns></top-campaigns>
 
+    <top-subscriptions></top-subscriptions>
+
     <funnel-graph></funnel-graph>
   </div>
 </div>
