--- a/src/app/pages/dashboard-page/dashboard.component.scss
+++ b/src/app/pages/dashboard-page/dashboard.component.scss
@@ -34,11 +34,18 @@
   top-campaigns {
     display: block;
     margin: 15px;
-    width: 30%;
+    width: 28%;
+  }
+
+  top-subscriptions {
+    display: block;
+    margin: 15px;
+    width: 28%;
   }
 
   funnel-graph {
     display: block;
     margin: 15px;
+    width: 44%;
   }
 }
