--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@
 @import "assets/scss/_registration.scss";
 @import "assets/scss/_login.scss";
 @import "assets/scss/_charts.scss";
+@import "assets/scss/_mat-rewrites.scss";
 
 /***************
   HTML Styles
