--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -17,7 +17,7 @@
       <div>{{revenueMessage}}</div>
     </div>
 
-    <dashboard-dual-graph [graphData]="data"></dashboard-dual-graph>
+    <dashboard-dual-graph [graphData]="data" [type]="seriesType"></dashboard-dual-graph>
   </div>
 
   <dashboard-issues-report [reports]="issueReports"></dashboard-issues-report>
