--- a/src/app/pages/notifications-page/notifications-section/notifications-section.component.scss
+++ b/src/app/pages/notifications-page/notifications-section/notifications-section.component.scss
@@ -103,7 +103,13 @@ table {
 }
 
 .spinner {
-  md-spinner {
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+
+  div {
+    margin: 10px 5px;
+    height: 18px;
+    border-radius: 5px;
+    background: rgba(0,0,0,0.08);
   }
 }
