--- a/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
+++ b/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
@@ -46,6 +46,6 @@
       <div>You can send notifications to more of your devices and applications by adding them to Devices and Apps</div>
       <div class="icon"><div class="layer1"><div class="layer2"><div class="text">?</div></div></div></div>
     </div>
-    <div class="mrw-button apps-button" [routerLink]="['/profile']" fragment="notifications">APPS AND DEVICES</div>
+    <div class="mrw-button apps-button" [routerLink]="['/profile']" fragment="appsanddevices">APPS AND DEVICES</div>
   </div>
 </div>
