--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -76,7 +76,11 @@
         </md-tab>
 
         <md-tab>
-          <notification-preferences [notificationSettings]="notificationSettings"></notification-preferences>
+          <notification-preferences
+            [notificationSettings]="notificationSettings"
+            (cancel)="cancelNotificationSettingsUpdate()"
+            (save)="notificationSettingsUpdated()">
+          </notification-preferences>
         </md-tab>
 
         <md-tab>
