--- a/src/app/pages/profile-page/notification-devices/notification-devices.component.html
+++ b/src/app/pages/profile-page/notification-devices/notification-devices.component.html
@@ -23,7 +23,7 @@
     </div>
   </div>
 
-  <div class="test-container">
+  <div class="notifications-test-container">
     <div class="content">
       <div>You can send a test notification to every device and application based on your settings</div>
     </div>
